--- a/modular-webapp/src/main/resources/archetype-resources/__rootArtifactId__-client/pom.xml
+++ b/modular-webapp/src/main/resources/archetype-resources/__rootArtifactId__-client/pom.xml
@@ -46,7 +46,7 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>net.ltgt.gwt.maven</groupId>
+        <groupId>com.risetek.gwt.maven</groupId>
         <artifactId>gwt-maven-plugin</artifactId>
         <configuration>
           <moduleName>${package}.${module}</moduleName>
