add sub directory for every projects

--- a/modular-webapp/src/main/resources/archetype-resources/__rootArtifactId__-server/src/main/webapp/WEB-INF/web.xml
+++ b/modular-webapp/src/main/resources/archetype-resources/__rootArtifactId__-server/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 	<!-- Servlets -->
   <servlet>
     <servlet-name>greetServlet</servlet-name>
-    <servlet-class>${package}.server.GreetingServiceImpl</servlet-class>
+    <servlet-class>${package}.${rootArtifactId}.server.GreetingServiceImpl</servlet-class>
   </servlet>
 
   <servlet-mapping>
