--- a/modular-webapp/src/main/resources/archetype-resources/pom.xml
+++ b/modular-webapp/src/main/resources/archetype-resources/pom.xml
@@ -14,8 +14,10 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
+    <gwtVersion>2.7.0</gwtVersion>
     <mavenVersion>3.0</mavenVersion>
+    <jdkVersion>1.7</jdkVersion>
+    <jettyVersion>9.2.3.v20140905</jettyVersion>
   </properties>
 
   <dependencyManagement>
@@ -23,7 +25,7 @@
       <dependency>
         <groupId>com.google.gwt</groupId>
         <artifactId>gwt</artifactId>
-        <version>2.7.0</version>
+        <version>${gwtVersion}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -53,14 +55,14 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.2</version>
           <configuration>
-            <source>1.7</source>
-            <target>1.7</target>
+            <source>${jdkVersion}</source>
+            <target>${jdkVersion}</target>
           </configuration>
         </plugin>
         <plugin>
           <groupId>org.eclipse.jetty</groupId>
           <artifactId>jetty-maven-plugin</artifactId>
-          <version>9.2.3.v20140905</version>
+          <version>${jettyVersion}</version>
         </plugin>
         <plugin>
           <groupId>net.ltgt.gwt.maven</groupId>
