--- a/modular-webapp/src/main/resources/archetype-resources/pom.xml
+++ b/modular-webapp/src/main/resources/archetype-resources/pom.xml
@@ -67,7 +67,7 @@
         <plugin>
           <groupId>net.ltgt.gwt.maven</groupId>
           <artifactId>gwt-maven-plugin</artifactId>
-          <version>1.0-beta-2</version>
+          <version>1.0-SNAPSHOT</version>
           <extensions>true</extensions>
           <configuration>
             <sourceLevel>1.7</sourceLevel>
