--- a/modular-webapp/src/main/resources/archetype-resources/__rootArtifactId__-server/pom.xml
+++ b/modular-webapp/src/main/resources/archetype-resources/__rootArtifactId__-server/pom.xml
@@ -12,10 +12,6 @@
   <artifactId>${artifactId}</artifactId>
   <packaging>war</packaging>
 
-  <prerequisites>
-    <maven>${mavenVersion}</maven>
-  </prerequisites>
-
   <dependencies>
     <dependency>
       <groupId>${dollar}{project.groupId}</groupId>
@@ -29,8 +25,36 @@
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.eclipse.jetty</groupId>
+          <artifactId>jetty-maven-plugin</artifactId>
+          <configuration>
+            <scanIntervalSeconds>1</scanIntervalSeconds>
+            <webApp>
+              <extraClasspath>${dollar}{basedir}/../${rootArtifactId}-shared/target/classes/</extraClasspath>
+            </webApp>
+            <contextXml>${dollar}{basedir}/src/main/jettyconf/context.xml</contextXml>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.tomcat.maven</groupId>
+          <artifactId>tomcat7-maven-plugin</artifactId>
+          <configuration>
+            <addWarDependenciesInClassloader>false</addWarDependenciesInClassloader>
+            <path>/</path>
+            <uriEncoding>UTF-8</uriEncoding>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 
   <profiles>
     <profile>
@@ -64,45 +88,19 @@
               <groupId>org.eclipse.jetty</groupId>
               <artifactId>jetty-maven-plugin</artifactId>
               <configuration>
-                <scanIntervalSeconds>1</scanIntervalSeconds>
                 <webApp>
-                  <baseResource implementation="org.eclipse.jetty.util.resource.ResourceCollection">
-                    <resourcesAsCSV>src/main/webapp,${dollar}{basedir}/../target/gwt/launcherDir/</resourcesAsCSV>
-                  </baseResource>
-                  <extraClasspath>${dollar}{basedir}/../${rootArtifactId}-shared/target/classes/</extraClasspath>
+                  <resourceBases>
+                    <resourceBase>${dollar}{basedir}/src/main/webapp</resourceBase>
+                    <resourceBase>${dollar}{basedir}/../target/gwt/launcherDir/</resourceBase>
+                  </resourceBases>
                 </webApp>
-                <systemProperties>
-                  <systemProperty>
-                    <name>gwt.codeserver.port</name>
-                    <value>9876</value>
-                  </systemProperty>
-                </systemProperties>
-              </configuration>
-            </plugin>
-            <plugin>
-              <groupId>org.apache.tomcat.maven</groupId>
-              <artifactId>tomcat6-maven-plugin</artifactId>
-              <configuration>
-                <addWarDependenciesInClassloader>false</addWarDependenciesInClassloader>
-                <contextFile>${dollar}{basedir}/src/main/tomcatconf/context.xml</contextFile>
-                <path>/</path>
-                <uriEncoding>UTF-8</uriEncoding>
-                <systemProperties>
-                  <gwt.codeserver.port>9876</gwt.codeserver.port>
-                </systemProperties>
               </configuration>
             </plugin>
             <plugin>
               <groupId>org.apache.tomcat.maven</groupId>
               <artifactId>tomcat7-maven-plugin</artifactId>
               <configuration>
-                <addWarDependenciesInClassloader>false</addWarDependenciesInClassloader>
                 <contextFile>${dollar}{basedir}/src/main/tomcatconf/context.xml</contextFile>
-                <path>/</path>
-                <uriEncoding>UTF-8</uriEncoding>
-                <systemProperties>
-                  <gwt.codeserver.port>9876</gwt.codeserver.port>
-                </systemProperties>
               </configuration>
             </plugin>
           </plugins>
