--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
   <modules>
     <module>modular-webapp</module>
+    <module>dagger-guice-rf-activities</module>
   </modules>
 
   <properties>
