add new moduler: empty-frame.

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
   <modules>
     <module>modular-webapp</module>
     <module>empty-webapp</module>
+    <module>empty-frame</module>
     <module>dagger-guice-rf-activities</module>
   </modules>
 
