--- a/empty-frame/src/main/resources/archetype-resources/server/pom.xml
+++ b/empty-frame/src/main/resources/archetype-resources/server/pom.xml
@@ -161,10 +161,11 @@
               <groupId>org.eclipse.jetty</groupId>
               <artifactId>jetty-maven-plugin</artifactId>
               <configuration>
+                <skip>false</skip>
                 <webApp>
                   <resourceBases>
                     <resourceBase>${dollar}{basedir}/src/main/webapp</resourceBase>
-                    <resourceBase>${dollar}{basedir}/../target/gwt/launcherDir/</resourceBase>
+                    <resourceBase>${dollar}{basedir}/target/${dollar}{project.artifactId}-${dollar}{project.version}</resourceBase>
                   </resourceBases>
                 </webApp>
               </configuration>
