working on empty-frame archetype

--- a/empty-frame/src/main/resources/archetype-resources/server/pom.xml
+++ b/empty-frame/src/main/resources/archetype-resources/server/pom.xml
@@ -47,6 +47,11 @@
       <artifactId>javax.servlet-api</artifactId>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+     <groupId>org.hibernate</groupId>
+     <artifactId>hibernate-validator</artifactId>
+     <version>4.2.0.Final</version>
+    </dependency>    
   </dependencies>
 
   <build>
