add module gwtp-frame-shiro

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <module>empty-webapp</module>
     <module>empty-frame</module>
     <module>empty-frame-shiro</module>
+    <module>gwtp-frame-shiro</module>
     <module>dagger-guice-rf-activities</module>
   </modules>
 
