--- a/empty-webapp/src/main/resources/archetype-resources/client/pom.xml
+++ b/empty-webapp/src/main/resources/archetype-resources/client/pom.xml
@@ -17,6 +17,12 @@
       <groupId>${dollar}{project.groupId}</groupId>
       <artifactId>${rootArtifactId}-shared</artifactId>
       <version>${dollar}{project.version}</version>
+      <type>gwt-lib</type>
+    </dependency>
+    <dependency>
+      <groupId>${dollar}{project.groupId}</groupId>
+      <artifactId>${rootArtifactId}-shared</artifactId>
+      <version>${dollar}{project.version}</version>
       <classifier>sources</classifier>
     </dependency>
     <dependency>
@@ -30,7 +36,6 @@
     <dependency>
       <groupId>com.google.gwt.inject</groupId>
       <artifactId>gin</artifactId>
-      <version>2.1.2</version>
     </dependency>
   </dependencies>
 
