--- a/empty-webapp/src/main/resources/archetype-resources/pom.xml
+++ b/empty-webapp/src/main/resources/archetype-resources/pom.xml
@@ -10,9 +10,10 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <gwtVersion>2.8.2</gwtVersion>
-    <jdkVersion>1.8</jdkVersion>
-    <jettyVersion>9.2.13.v20150730</jettyVersion>
+    <gin.version>2.1.2</gin.version>
+    <gwt.version>2.8.2</gwt.version>
+    <jdk.version>1.8</jdk.version>
+    <jetty.version>9.2.13.v20150730</jetty.version>
   </properties>
 
   <dependencyManagement>
@@ -20,9 +21,14 @@
       <dependency>
         <groupId>com.google.gwt</groupId>
         <artifactId>gwt</artifactId>
-        <version>${gwtVersion}</version>
+        <version>${gwt.version}</version>
         <type>pom</type>
         <scope>import</scope>
+      </dependency>
+      <dependency>
+       <groupId>com.google.gwt.inject</groupId>
+       <artifactId>gin</artifactId>
+       <version>${gin.version}</version>
       </dependency>
       <dependency>
         <groupId>javax.servlet</groupId>
@@ -49,14 +55,17 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
           <configuration>
-            <source>${jdkVersion}</source>
-            <target>${jdkVersion}</target>
+            <source>${jdk.version}</source>
+            <target>${jdk.version}</target>
           </configuration>
         </plugin>
         <plugin>
           <groupId>org.eclipse.jetty</groupId>
           <artifactId>jetty-maven-plugin</artifactId>
-          <version>${jettyVersion}</version>
+          <version>${jetty.version}</version>
+          <configuration>
+            <skip>true</skip>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>net.ltgt.gwt.maven</groupId>
