--- a/empty-frame/src/main/resources/archetype-resources/client/pom.xml
+++ b/empty-frame/src/main/resources/archetype-resources/client/pom.xml
@@ -17,6 +17,7 @@
       <groupId>${dollar}{project.groupId}</groupId>
       <artifactId>${rootArtifactId}-shared</artifactId>
       <version>${dollar}{project.version}</version>
+      <type>gwt-lib</type>
     </dependency>
     <dependency>
       <groupId>${dollar}{project.groupId}</groupId>
