working on gwtp-frame-shiro

--- a/gwtp-frame-shiro/src/main/resources/archetype-resources/client/pom.xml
+++ b/gwtp-frame-shiro/src/main/resources/archetype-resources/client/pom.xml
@@ -50,6 +50,10 @@
      <artifactId>gwtp-mvp-client</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.gwtplatform</groupId>
+      <artifactId>gwtp-processors</artifactId>
+	</dependency>
+    <dependency>
      <groupId>com.gwtplatform</groupId>
      <artifactId>gwtp-dispatch-rpc-client</artifactId>
     </dependency>
