--- a/gwtp-frame-shiro/src/main/resources/archetype-resources/pom.xml
+++ b/gwtp-frame-shiro/src/main/resources/archetype-resources/pom.xml
@@ -88,6 +88,11 @@
        <artifactId>gwtp-dispatch-rpc-client</artifactId>
        <version>${dollar}{gwtp.version}</version>
       </dependency>
+      <dependency>
+       <groupId>com.gwtplatform</groupId>
+       <artifactId>gwtp-processors</artifactId>
+       <version>${dollar}{gwtp.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -159,6 +164,11 @@
           <artifactId>exec-maven-plugin</artifactId>
           <version>1.6.0</version>
         </plugin>
+      <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>build-helper-maven-plugin</artifactId>
+          <version>3.0.0</version>
+      </plugin>
       </plugins>
     </pluginManagement>
   </build>
