--- a/gwtp-frame-shiro/src/main/resources/archetype-resources/pom.xml
+++ b/gwtp-frame-shiro/src/main/resources/archetype-resources/pom.xml
@@ -11,12 +11,15 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <gin.version>2.1.2</gin.version>
-    <guice.version>3.0</guice.version>
+    <gin.version>3.0.0</gin.version>
+    <guice.version>4.2.0</guice.version>
     <gwt.version>2.8.2</gwt.version>
-	<gwtp.version>1.6</gwtp.version>
+    <gwt-maven.version>1.0.0</gwt-maven.version>
+    <gwtp.version>1.6</gwtp.version>
     <jdk.version>1.8</jdk.version>
     <jetty.version>9.2.13.v20150730</jetty.version>
+    <maven-compiler.version>3.8.0</maven-compiler.version>
+    <maven-source.version>3.0.1</maven-source.version>
   </properties>
 
   <dependencyManagement>
@@ -44,7 +47,7 @@
        <version>${dollar}{gwt.version}</version>
       </dependency>
       <dependency>
-       <groupId>com.google.gwt.inject</groupId>
+       <groupId>io.github.gwtplus.gin</groupId>
        <artifactId>gin</artifactId>
        <version>${dollar}{gin.version}</version>
       </dependency>
@@ -97,21 +100,11 @@
   </dependencyManagement>
 
   <build>
-    <plugins>
-      <plugin>
-        <groupId>net.ltgt.gwt.maven</groupId>
-        <artifactId>gwt-maven-plugin</artifactId>
-        <inherited>false</inherited>
-        <configuration>
-          <launcherDir>${project.build.directory}/gwt/launcherDir</launcherDir>
-        </configuration>
-      </plugin>
-    </plugins>
     <pluginManagement>
       <plugins>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
+          <version>${dollar}{maven-compiler.version}</version>
           <configuration>
             <source>${dollar}{jdk.version}</source>
             <target>${dollar}{jdk.version}</target>
@@ -128,16 +121,22 @@
         <plugin>
           <groupId>net.ltgt.gwt.maven</groupId>
           <artifactId>gwt-maven-plugin</artifactId>
-          <version>1.0-rc-10</version>
+          <version>${dollar}{gwt-maven.version}</version>
           <extensions>true</extensions>
           <configuration>
+            <launcherDir>${project.build.directory}/gwt/launcherDir</launcherDir>
             <sourceLevel>1.8</sourceLevel>
             <failOnError>true</failOnError>
+            <codeserverArgs>
+              <arg>-bindAddress</arg>
+              <arg>0.0.0.0</arg>
+            </codeserverArgs>
           </configuration>
         </plugin>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
-          <version>3.0.1</version>
+          <version>${dollar}{maven-source.version}</version>
           <executions>
             <execution>
               <id>attach-sources</id>
@@ -154,21 +153,6 @@
             </includes>
           </configuration>
         </plugin>
-        <plugin>
-          <groupId>org.apache.tomcat.maven</groupId>
-          <artifactId>tomcat7-maven-plugin</artifactId>
-          <version>2.2</version>
-        </plugin>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>exec-maven-plugin</artifactId>
-          <version>1.6.0</version>
-        </plugin>
-      <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>build-helper-maven-plugin</artifactId>
-          <version>3.0.0</version>
-      </plugin>
       </plugins>
     </pluginManagement>
   </build>
