exchange bindery and generator package, generator will be exclude from GWT

--- a/gwtp-frame-shiro/src/main/resources/archetype-resources/client/pom.xml
+++ b/gwtp-frame-shiro/src/main/resources/archetype-resources/client/pom.xml
@@ -89,7 +89,7 @@
             <phase>compile</phase>
             <configuration>
               <processors>
-                <processor>${package}.bindery.PresenterModuleMavenProcesser</processor>
+                <processor>${package}.bindery.generator.PresenterModuleMavenProcesser</processor>
               </processors>
             </configuration>
           </execution>
