--- a/gwtp-frame-shiro/src/main/resources/archetype-resources/server/pom.xml
+++ b/gwtp-frame-shiro/src/main/resources/archetype-resources/server/pom.xml
@@ -73,8 +73,12 @@
   </dependencies>
 
   <build>
-	<!-- Generate compiled stuff in the folder used for developing mode -->
-	<outputDirectory>${dollar}{webappDirectory}/WEB-INF/classes</outputDirectory>
+    <!-- Generate compiled stuff in the folder used for developing mode -->
+    <outputDirectory>${dollar}{webappDirectory}/WEB-INF/classes</outputDirectory>
+    <!-- hacker we missed compile phase for generated-sources, so compile it at testCompile phase -->
+    <testOutputDirectory>${dollar}{webappDirectory}/WEB-INF/classes</testOutputDirectory>	 
+    <testSourceDirectory>${dollar}{project.build.directory}/generated-sources/annotations</testSourceDirectory>	 
+
     <pluginManagement>
       <plugins>
         <plugin>
@@ -91,6 +95,28 @@
         </plugin>
       </plugins>
     </pluginManagement>
+
+    <plugins>
+      <plugin>
+        <groupId>org.bsc.maven</groupId>
+        <artifactId>maven-processor-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>process</id>
+            <goals>
+              <goal>process</goal>
+            </goals>
+            <phase>compile</phase>
+            <configuration>
+              <outputDirectory>${dollar}{project.build.directory}/generated-sources/annotations</outputDirectory>
+              <processors>
+                <processor>${package}.server.bindery.generator.ModuleMavenProcesser</processor>
+              </processors>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
   </build>
 
   <profiles>
