--- a/gwtp-frame-shiro/src/main/resources/archetype-resources/pom.xml
+++ b/gwtp-frame-shiro/src/main/resources/archetype-resources/pom.xml
@@ -12,15 +12,16 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <gin.version>3.0.0</gin.version>
-    <guice.version>4.2.0</guice.version>
-    <gwt.version>2.8.2</gwt.version>
+    <guice.version>4.2.3</guice.version>
+    <gwt.version>2.9.0</gwt.version>
     <gwt-maven.version>1.0.0</gwt-maven.version>
     <gwtp.version>1.6</gwtp.version>
     <jdk.version>1.8</jdk.version>
     <jetty.version>9.2.13.v20150730</jetty.version>
-    <maven-compiler.version>3.8.0</maven-compiler.version>
-    <maven-source.version>3.0.1</maven-source.version>
-    <maven-processor.version>4.0-beta1</maven-processor.version>
+    <maven-compiler.version>3.8.1</maven-compiler.version>
+    <maven-source.version>3.2.0</maven-source.version>
+    <maven-processor.version>4.0-rc1</maven-processor.version>
+    <maven-war.version>3.2.3</maven-war.version>
   </properties>
 
   <dependencyManagement>
@@ -158,6 +159,19 @@
           <groupId>org.bsc.maven</groupId>
           <artifactId>maven-processor-plugin</artifactId>
           <version>${dollar}{maven-processor.version}</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-war-plugin</artifactId>
+          <version>${dollar}{maven-war.version}</version>
+            <executions>
+              <execution>
+                <id>default-war</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>war</goal>
+                </goals>
+              </execution>
+           </executions>
         </plugin>
       </plugins>
     </pluginManagement>
