add git commit-id trace, development package and Host project concept, access check based on permissions now

--- a/gwtp-frame-shiro/src/main/resources/archetype-resources/pom.xml
+++ b/gwtp-frame-shiro/src/main/resources/archetype-resources/pom.xml
@@ -22,6 +22,7 @@
     <maven-source.version>3.2.0</maven-source.version>
     <maven-processor.version>4.0-rc1</maven-processor.version>
     <maven-war.version>3.3.1</maven-war.version>
+    <slf4j.version>1.7.26</slf4j.version>
   </properties>
 
   <dependencyManagement>
@@ -97,6 +98,11 @@
        <groupId>com.gwtplatform</groupId>
        <artifactId>gwtp-processors</artifactId>
        <version>${dollar}{gwtp.version}</version>
+      </dependency>
+      <dependency>
+       <groupId>org.slf4j</groupId>
+       <artifactId>slf4j-simple</artifactId>
+       <version>${slf4j.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
