--- a/gwtp-frame-shiro/src/main/resources/archetype-resources/client/pom.xml
+++ b/gwtp-frame-shiro/src/main/resources/archetype-resources/client/pom.xml
@@ -14,6 +14,7 @@
 
   <properties>
     <gwt-material.version>2.4.0-rc1</gwt-material.version>
+    <eclipse-jgit.version>5.10.0.202012080955-r</eclipse-jgit.version>
   </properties>
 
   <dependencies>
@@ -73,6 +74,15 @@
      <artifactId>gwt-material-addins</artifactId>
      <version>${dollar}{gwt-material.version}</version>
     </dependency>    
+    <dependency>
+     <groupId>org.eclipse.jgit</groupId>
+     <artifactId>org.eclipse.jgit</artifactId>
+     <version>${eclipse-jgit.version}</version>
+   </dependency>
+   <dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-simple</artifactId>
+   </dependency>
   </dependencies>
 
   <build>
@@ -104,6 +114,7 @@
             </goals>
             <phase>compile</phase>
             <configuration>
+              <outputDirectory>${project.build.directory}/generated-sources/annotations</outputDirectory>
               <processors>
                 <processor>${package}.bindery.generator.PresenterModuleMavenProcesser</processor>
               </processors>
@@ -111,6 +122,6 @@
           </execution>
         </executions>
       </plugin>
-    </plugins>
+   </plugins>
   </build>
 </project>
