--- a/gwtp-frame-shiro/src/main/resources/archetype-resources/server/pom.xml
+++ b/gwtp-frame-shiro/src/main/resources/archetype-resources/server/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-#set( $dollar = '$' )
+#set($dollar = '$')
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
@@ -19,6 +19,7 @@
     <commons-logging.version>1.2</commons-logging.version>
     <hsqldb-version>2.5.1</hsqldb-version>
     <oltu.version>1.0.2</oltu.version>
+    <smallrye.version>1.10.0</smallrye.version>
   </properties>
 
   <dependencies>
@@ -85,7 +86,7 @@
    <dependency>
     <groupId>org.hsqldb</groupId>
     <artifactId>hsqldb</artifactId>
-    <version>${hsqldb-version}</version>
+    <version>${dollar}{hsqldb-version}</version>
    </dependency>
    <!-- oltu -->
    <dependency>
@@ -103,27 +104,27 @@
    <dependency>
     <groupId>org.apache.oltu.oauth2</groupId>
     <artifactId>org.apache.oltu.oauth2.common</artifactId>
-    <version>${oltu.version}</version>
+    <version>${dollar}{oltu.version}</version>
    </dependency>
 
 <!-- 
    <dependency>
     <groupId>org.apache.oltu.oauth2</groupId>
     <artifactId>org.apache.oltu.oauth2.resourceserver</artifactId>
-    <version>${oltu.version}</version>
+    <version>${dollar}{oltu.version}</version>
    </dependency>
  -->
 
    <dependency>
     <groupId>org.apache.oltu.oauth2</groupId>
     <artifactId>org.apache.oltu.oauth2.authzserver</artifactId>
-    <version>${oltu.version}</version>
+    <version>${dollar}{oltu.version}</version>
     </dependency>
 
     <dependency>
      <groupId>org.apache.oltu.oauth2</groupId>
      <artifactId>org.apache.oltu.oauth2.client</artifactId>
-     <version>${oltu.version}</version>
+     <version>${dollar}{oltu.version}</version>
     </dependency>
 
 
@@ -133,6 +134,22 @@
      <version>1.0.3</version>
    </dependency>
 
+   <dependency>
+    <groupId>org.hibernate.orm</groupId>
+    <artifactId>hibernate-core</artifactId>
+   </dependency>
+
+<!-- 
+   <dependency>
+    <groupId>org.hibernate.orm</groupId>
+    <artifactId>hibernate-agroal</artifactId>
+   </dependency>
+ -->
+   <dependency>
+    <groupId>io.smallrye.config</groupId>
+    <artifactId>smallrye-config</artifactId>
+    <version>${dollar}{smallrye.version}</version>
+    </dependency>
   </dependencies>
 
   <build>
