--- a/gwtp-frame-shiro/src/main/resources/archetype-resources/shared/pom.xml
+++ b/gwtp-frame-shiro/src/main/resources/archetype-resources/shared/pom.xml
@@ -34,6 +34,10 @@
       <artifactId>gwt-servlet</artifactId>
       <scope>provided</scope>
     </dependency>
+   <dependency>
+    <groupId>org.hibernate.orm</groupId>
+    <artifactId>hibernate-core</artifactId>
+   </dependency>
   </dependencies>
 
   <build>
