--- a/dagger-guice-rf-activities/src/main/resources/archetype-resources/server/pom.xml
+++ b/dagger-guice-rf-activities/src/main/resources/archetype-resources/server/pom.xml
@@ -12,6 +12,9 @@
   <artifactId>${artifactId}</artifactId>
   <packaging>war</packaging>
 
+  <properties>
+    <webappDirectory>${dollar}{project.build.directory}/${dollar}{project.build.finalName}</webappDirectory>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>${dollar}{project.groupId}</groupId>
@@ -83,6 +86,7 @@
           <groupId>org.eclipse.jetty</groupId>
           <artifactId>jetty-maven-plugin</artifactId>
           <configuration>
+            <skip>false</skip>
             <scanIntervalSeconds>1</scanIntervalSeconds>
             <webApp>
               <extraClasspath>${dollar}{basedir}/../${rootArtifactId}-shared/target/classes/</extraClasspath>
@@ -169,9 +173,10 @@
               <artifactId>jetty-maven-plugin</artifactId>
               <configuration>
                 <webApp>
+                  <descriptor>${dollar}{basedir}/src/main/webapp/WEB-INF/web.xml</descriptor>
                   <resourceBases>
                     <resourceBase>${dollar}{basedir}/src/main/webapp</resourceBase>
-                    <resourceBase>${dollar}{basedir}/../target/gwt/launcherDir/</resourceBase>
+                    <resourceBase>${dollar}{webappDirectory}</resourceBase>
                   </resourceBases>
                 </webApp>
               </configuration>
