fix bug on empty-webapp

--- a/empty-webapp/src/main/resources/archetype-resources/client/pom.xml
+++ b/empty-webapp/src/main/resources/archetype-resources/client/pom.xml
@@ -34,7 +34,7 @@
       <artifactId>gwt-dev</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.google.gwt.inject</groupId>
+      <groupId>io.github.gwtplus.gin</groupId>
       <artifactId>gin</artifactId>
     </dependency>
   </dependencies>
