--- a/empty-webapp/src/main/resources/archetype-resources/pom.xml
+++ b/empty-webapp/src/main/resources/archetype-resources/pom.xml
@@ -14,8 +14,8 @@
     <gwt.version>2.9.0</gwt.version>
     <gwt-maven.version>1.0.0</gwt-maven.version>
     <jdk.version>1.8</jdk.version>
-    <jetty.version>9.2.13.v20150730</jetty.version>
-    <maven-compiler.version>3.8.1</maven-compiler.version>
+    <jetty.version>9.4.45.v20220203</jetty.version>
+    <maven-compiler.version>3.10.1</maven-compiler.version>
     <maven-source.version>3.2.0</maven-source.version>
   </properties>
 
@@ -29,7 +29,7 @@
         <scope>import</scope>
       </dependency>
       <dependency>
-       <groupId>com.google.gwt.inject</groupId>
+       <groupId>io.github.gwtplus.gin</groupId>
        <artifactId>gin</artifactId>
        <version>${dollar}{gin.version}</version>
       </dependency>
