--- a/modular-webapp/src/main/resources/archetype-resources/client/pom.xml
+++ b/modular-webapp/src/main/resources/archetype-resources/client/pom.xml
@@ -17,6 +17,12 @@
       <groupId>${dollar}{project.groupId}</groupId>
       <artifactId>${rootArtifactId}-shared</artifactId>
       <version>${dollar}{project.version}</version>
+      <type>gwt-lib</type>
+    </dependency>
+    <dependency>
+      <groupId>${dollar}{project.groupId}</groupId>
+      <artifactId>${rootArtifactId}-shared</artifactId>
+      <version>${dollar}{project.version}</version>
       <classifier>sources</classifier>
     </dependency>
     <dependency>
