--- a/modular-webapp/src/main/resources/archetype-resources/server/pom.xml
+++ b/modular-webapp/src/main/resources/archetype-resources/server/pom.xml
@@ -12,6 +12,10 @@
   <artifactId>${artifactId}</artifactId>
   <packaging>war</packaging>
 
+  <properties>
+    <webappDirectory>${dollar}{project.build.directory}/${dollar}{project.build.finalName}</webappDirectory>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>${dollar}{project.groupId}</groupId>
@@ -30,26 +34,20 @@
   </dependencies>
 
   <build>
+	<!-- Generate compiled stuff in the folder used for developing mode -->
+	<outputDirectory>${dollar}{webappDirectory}/WEB-INF/classes</outputDirectory>
     <pluginManagement>
       <plugins>
         <plugin>
           <groupId>org.eclipse.jetty</groupId>
           <artifactId>jetty-maven-plugin</artifactId>
           <configuration>
+            <skip>false</skip>
             <scanIntervalSeconds>1</scanIntervalSeconds>
             <webApp>
               <extraClasspath>${dollar}{basedir}/../${rootArtifactId}-shared/target/classes/</extraClasspath>
             </webApp>
             <contextXml>${dollar}{basedir}/src/main/jettyconf/context.xml</contextXml>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.tomcat.maven</groupId>
-          <artifactId>tomcat7-maven-plugin</artifactId>
-          <configuration>
-            <addWarDependenciesInClassloader>false</addWarDependenciesInClassloader>
-            <path>/</path>
-            <uriEncoding>UTF-8</uriEncoding>
           </configuration>
         </plugin>
       </plugins>
@@ -89,18 +87,12 @@
               <artifactId>jetty-maven-plugin</artifactId>
               <configuration>
                 <webApp>
+                  <descriptor>${dollar}{basedir}/src/main/webapp/WEB-INF/web.xml</descriptor>
                   <resourceBases>
                     <resourceBase>${dollar}{basedir}/src/main/webapp</resourceBase>
-                    <resourceBase>${dollar}{basedir}/../target/gwt/launcherDir/</resourceBase>
+                    <resourceBase>${dollar}{webappDirectory}</resourceBase>
                   </resourceBases>
                 </webApp>
-              </configuration>
-            </plugin>
-            <plugin>
-              <groupId>org.apache.tomcat.maven</groupId>
-              <artifactId>tomcat7-maven-plugin</artifactId>
-              <configuration>
-                <contextFile>${dollar}{basedir}/src/main/tomcatconf/context.xml</contextFile>
               </configuration>
             </plugin>
           </plugins>
