--- a/gwtp-frame-shiro/src/main/resources/archetype-resources/server/pom.xml
+++ b/gwtp-frame-shiro/src/main/resources/archetype-resources/server/pom.xml
@@ -76,7 +76,7 @@
      <artifactId>slf4j-simple</artifactId>
     </dependency>
     <dependency>
-     <groupId>com.google.gwt</groupId>
+     <groupId>org.gwtproject</groupId>
      <artifactId>gwt-servlet</artifactId>
     </dependency>
     <dependency>
@@ -167,9 +167,9 @@
           <artifactId>jetty-maven-plugin</artifactId>
           <configuration>
             <skip>false</skip>
-            <scanIntervalSeconds>1</scanIntervalSeconds>
+            <scan>1</scan>
             <webApp>
-              <extraClasspath>${dollar}{basedir}/../${rootArtifactId}-shared/target/classes/</extraClasspath>
+              <!-- <extraClasspath>${basedir}/../risetek.usbtools-shared/target/classes/</extraClasspath> -->
             </webApp>
             <contextXml>${dollar}{basedir}/src/main/jettyconf/context.xml</contextXml>
           </configuration>
