--- a/gwtp-frame-shiro/src/main/resources/archetype-resources/shared/pom.xml
+++ b/gwtp-frame-shiro/src/main/resources/archetype-resources/shared/pom.xml
@@ -30,7 +30,7 @@
       <artifactId>gwtp-processors</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.google.gwt</groupId>
+      <groupId>org.gwtproject</groupId>
       <artifactId>gwt-servlet</artifactId>
       <scope>provided</scope>
     </dependency>
