Redesign HomeCard layout. Redesign Menu layout. Add EventBus based on websocket. Bug fixed.

--- a/gwtp-frame-shiro/src/main/resources/archetype-resources/client/pom.xml
+++ b/gwtp-frame-shiro/src/main/resources/archetype-resources/client/pom.xml
@@ -90,6 +90,7 @@
       <plugin>
         <groupId>net.ltgt.gwt.maven</groupId>
         <artifactId>gwt-maven-plugin</artifactId>
+        <extensions>true</extensions>
         <configuration>
           <moduleName>${package}.${module}</moduleName>
           <moduleShortName>${module-short-name}</moduleShortName>
