--- a/gwtp-frame-shiro/src/main/resources/archetype-resources/server/pom.xml
+++ b/gwtp-frame-shiro/src/main/resources/archetype-resources/server/pom.xml
@@ -150,6 +150,13 @@
     <artifactId>smallrye-config</artifactId>
     <version>${dollar}{smallrye.version}</version>
     </dependency>
+
+   <dependency>
+    <groupId>javax.websocket</groupId>
+    <artifactId>javax.websocket-api</artifactId>
+    <version>1.1</version>
+    <scope>provided</scope>
+   </dependency>
   </dependencies>
 
   <build>
